# social_support_agent

./: README.md  app.py  config.py  pyproject.toml  wrapper.py
agents/: chatbot.py  decision_maker.py  extractor.py  recommender.py  supervisor.py  validator.py
database/: db_operations.py
deployment/: README.md
deployment/config/: .env.example  nginx.conf
deployment/docker/: .dockerignore  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml
deployment/requirements/: requirements-dev.txt  requirements-prod.txt  requirements.txt
deployment/scripts/: build.sh  deploy.sh
document_processing/: extraction.py  ocr.py  prompts.py
documentation/: solution-summary.md
inference/: decision_model.py
models/: agent_state.py  data_models.py  label_encoder.pkl  model.xgb
storage/: cached_extraction_data_file_path.pkl
storage/llama_index_storage/: default__vector_store.json  docstore.json  index_store.json
vector_store/: operations.py
workflow/: graph.py
